[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enc4ppm"
version = "0.1.0"
description = "Encode data for predictive process monitoring"
authors = [
    { name = "Riccardo Graziosi", email = "riccardo.graziosi97@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/rgraziosi-fbk/enc4ppm"
