[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enc4ppm"
version = "0.1.0"
description = "Encode data for predictive process monitoring"
authors = [
    { name = "Riccardo Graziosi", email = "riccardo.graziosi97@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rgraziosi-fbk/enc4ppm"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]