[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "enc4ppm"
version = "0.1.1"
description = "Encode logs for predictive process monitoring"
authors = [
    { name = "Riccardo Graziosi", email = "riccardo.graziosi97@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pandas",
]

[project.urls]
Homepage = "https://github.com/rgraziosi-fbk/enc4ppm"
Issues = "https://github.com/rgraziosi-fbk/enc4ppm/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]